--- a/webplayer/templates/assessment.html
+++ b/webplayer/templates/assessment.html
@@ -9,6 +9,36 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="https://vjs.zencdn.net/7.17.0/video-js.css" rel="stylesheet" />
     <title>Video Quality Assessment</title>
+    <script src="/static/js/jquery-3.6.0.js"></script>
+    <script>
+      $(function(){
+        $('#btn_true').click(function(){
+          $.get('/get_quality/?res=2',function(data){
+            if (data["status"]!='ok') console.log("can't recieve response");
+            else console.log('send data successfully');
+          })
+        })
+      })
+
+      $(function(){
+        $('#btn_uncertain').click(function(){
+          $.get('/get_quality/?res=1',function(data){
+            if (data["status"]!='ok') console.log("can't recieve response");
+            else console.log('send data successfully');
+          })
+        })
+      })
+
+      $(function(){
+        $('#btn_fake').click(function(){
+          $.get('/get_quality/?res=0',function(data){
+            if (data["status"]!='ok') console.log("can't recieve response");
+            else console.log('send data successfully');
+          })
+        })
+      })
+
+    </script>
   </head>
   <body>
     <h1>Hello, world!</h1>
@@ -42,10 +72,16 @@
         </video> -->
       {% endfor %}
     </div>
+    
+    <hr>
+    <input type="button" id="btn_true" value="自然，不是伪造视频">
+    <input type="button" id="btn_uncertain" value="有些不自然，可能是伪造视频">
+    <input type="button" id="btn_fake" value="不自然，是伪造视频">
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <!-- jQuery loaded at top -->
+    <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   </body>
