--- a/webplayer/templates/assessment.html
+++ b/webplayer/templates/assessment.html
@@ -11,18 +11,57 @@
     <title>Video Quality Assessment</title>
     <script src="/static/js/jquery-3.6.0.js"></script>
     <script>
+      let testednumber={{ testednumber }};
+
+      function repaint_video(data){
+        console.log(data);
+        // let videowrap=$('#videowrap');
+        var videowrap = document.querySelector('#videowrap');
+        if (videowrap) console.log('find videowrap!');
+        videowrap.innerHTML = `
+        <h3 class="text-center">${data.video_caption}</h3>
+        <p id="current_videoID" style="display:none">${data.video_videoID}</p>
+        <video
+        id="my-video"
+        class="video-js vjs-default-skin vjs-big-play-centered"
+        controls
+        preload="auto"
+        width="auto"
+        height="auto"
+        autoplay="true"
+        muted
+        data-setup="{}">
+          <source src="${data.video_url}" type="video/mp4" />
+          <p class="vjs-no-js">
+            To view this video please enable JavaScript, and consider upgrading to a
+            web browser that
+            <a href="https://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
+          </p>
+        </video>
+        `;
+
+      }
+
       $(function(){
         $('#btn_true').click(function(){
-          $.get('/get_quality/?res=2',function(data){
+          let videoid = $('#current_videoID').text();
+          $.get('/get_quality/?res=2&id='+videoid,function(data){
             if (data["status"]!='ok') console.log("can't recieve response");
-            else console.log('send data successfully');
+            else {
+              console.log('send data successfully');
+              testednumber+=1;
+              $.get('/get_next/?testednumber='+testednumber,function(data){
+                repaint_video(data);
+              });
+            }
           })
         })
       })
 
       $(function(){
         $('#btn_uncertain').click(function(){
-          $.get('/get_quality/?res=1',function(data){
+          let videoid = $('#current_videoID').text();
+          $.get('/get_quality/?res=1&id='+videoid,function(data){
             if (data["status"]!='ok') console.log("can't recieve response");
             else console.log('send data successfully');
           })
@@ -31,7 +70,8 @@
 
       $(function(){
         $('#btn_fake').click(function(){
-          $.get('/get_quality/?res=0',function(data){
+          let videoid = $('#current_videoID').text();
+          $.get('/get_quality/?res=0&id='+videoid,function(data){
             if (data["status"]!='ok') console.log("can't recieve response");
             else console.log('send data successfully');
           })
@@ -43,9 +83,9 @@
   <body>
     <h1>Hello, world!</h1>
     <hr>
-    <div class="container">
-      {% for x in video %}
-      <h3 class="text-center">{{x.caption}}</h3>
+    <div class="container" id="videowrap">
+      <h3 class="text-center">{{video.caption}}</h3>
+      <p id="current_videoID" style="display:none">{{video.videoID}}</p>
       <video
       id="my-video"
       class="video-js vjs-default-skin vjs-big-play-centered"
@@ -55,23 +95,16 @@
       height="auto"
       autoplay="true"
       muted
-      poster="MY_VIDEO_POSTER.jpg"
       data-setup="{}">
-        <source src="{{x.video.url}}" type="video/mp4" />
+        <source src="{{video.video.url}}" type="video/mp4" />
         <p class="vjs-no-js">
           To view this video please enable JavaScript, and consider upgrading to a
           web browser that
           <a href="https://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
         </p>
       </video>
-  
-      <script src="https://vjs.zencdn.net/7.17.0/video.min.js"></script>
-      <!-- old video settings -->
-        <!-- <video class="embed-responsive embed-responsive-16by9" controls="controls">
-          <source src="{{x.video.url}}" type="video/mp4" />
-        </video> -->
-      {% endfor %}
     </div>
+    <script src="https://vjs.zencdn.net/7.17.0/video.min.js"></script>
     
     <hr>
     <input type="button" id="btn_true" value="自然，不是伪造视频">
