fix some safty issue and add css to loginpage

--- a/webplayer/templates/loginfail.html
+++ b/webplayer/templates/loginfail.html
@@ -13,7 +13,7 @@
   <body>
     <h1>登录失败！</h1><br>
 
-    <p>您输入的序列号有误，请输入姓名、邮箱地址以及正确序列号进行登录！</p><br>
+    <p>请输入姓名、邮箱地址以及正确序列号进行登录！</p><br>
     <p>获取序列号请联系georgefen@qq.com，注意，个序列号仅用于一次测试。</p><br>
     <p>如有问题，请联系georgefen@qq.com</p><br>
     <a href="{% url 'loginpage' %}">
