--- a/webplayer/templates/login.html
+++ b/webplayer/templates/login.html
@@ -1,33 +1,46 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
+{% extends 'base.html' %}
+{% load static %}
+{% block head %}
     <title>Hello, world!</title>
-  </head>
-  <body>
-    <h1>Start quality assessment!</h1>
+{% endblock %}
 
-    <form method="post" action="/login_check/">
-      {% csrf_token %}
-      <p>姓名：</p>
-      <input type="text" name="username"><br>
-      <p>邮箱：</p>
-      <input type="text" name="email"><br>
-      <p>序列号：</p>
-      <input type="text" name="serialnumber"><br>
-      <input type="submit" value="登录">
-    </form>
+{% block content %}
+  <div class="container">
+    <div class="row">
+      <div class="col-3">
+      </div>
+      <div class="col-6">
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  </body>
-</html>
+        <div class="card" style="top: 50%;box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.1);">
+          <div class="card-header" style="font-size:2.2em;text-align: center;">开始您的测试！</div>
+          <div class="card-body">
+            
+            <form method="post" action="/login_check/">
+              {% csrf_token %}
+              <div class="mb-3">
+                <label class="form-label" style="font-size: 1.2em;">姓名：</label>
+                <input type="text" name="username" class="form-control" placeholder="你的名字">
+                <div id="emailHelp" class="form-text">我们不会与任何人分享你的姓名</div>
+              </div>
+              <div class="mb-3">
+                <label for="exampleInputEmail1" class="form-label" style="font-size: 1.2em;">邮箱：</label>
+                <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                <div id="emailHelp" class="form-text">我们不会与任何人分享你的邮箱</div>
+              </div>
+              <div class="mb-3">
+                <label for="exampleInputPassword1" class="form-label" style="font-size: 1.2em;">序列号：</label>
+                <input type="text" name="serialnumber" class="form-control" id="exampleInputPassword1">
+              </div>
+              <button type="submit" class="btn btn-primary" style="display:block;margin:0 auto;">登录</button>
+            </form>
+
+          </div>
+        </div>
+        
+
+      </div>
+      <div class="col-3">
+      </div>
+    </div>
+  </div>
+{% endblock %}
