--- a/webplayer/templates/assessment.html
+++ b/webplayer/templates/assessment.html
@@ -5,12 +5,11 @@
 {% block head %}
     <link href="https://vjs.zencdn.net/7.17.0/video-js.css" rel="stylesheet" />
     <title>Video Quality Assessment</title>
-    <script src="/static/js/jquery-3.6.0.js"></script>
+    <script src="/static/js/jquery-3.6.0.min.js"></script>
     <script>
       let testednumber={{ testednumber }};
 
       function repaint_video(data){
-        console.log(data);
         $('#current_videocaption').text(data.video_caption);
         $('#current_videoID').text(data.video_videoID);
         $('#my-video_html5_api').attr("src",data.video_url);
@@ -75,7 +74,7 @@
 
 {% block content %}
 
-<div class="container" style="margin-top: 1.5em;">
+<div class="container" style="margin-top: 1.5em;margin-bottom: 1.5rem;">
   <div class="row">
     <div class="col-sm-3">
       
