--- a/webplayer/templates/login.html
+++ b/webplayer/templates/login.html
@@ -6,8 +6,8 @@
 
 {% block content %}
 
-<div style="width: 40%;height: 50%;top: 50%;left:50%;position: absolute;transform: translate(-50%,-50%);">
-  <div class="card border border-light" style="box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.1);">
+<div style="width: 95%;height: 50%;top: 50%;left:50%;position: absolute;transform: translate(-50%,-50%);display: flex;">
+  <div class="card border border-light" style="margin: auto;box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.1);min-width: 45%;">
     <div class="card-header" style="font-size:2.2em;text-align: center;">开始您的评估！</div>
     <div class="card-body">
       
