--- a/webplayer/templates/loginfail.html
+++ b/webplayer/templates/loginfail.html
@@ -5,9 +5,9 @@
 {% endblock %}
 {% block content %}
 
-<div style="width: 40%;height: 50%;top: 50%;left:50%;position: absolute;transform: translate(-50%,-50%);">
+<div style="width: 95%;height: 50%;top: 50%;left:50%;position: absolute;transform: translate(-50%,-50%);display: flex;">
 
-  <div class="card border border-light" style="box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.1);">
+  <div class="card border border-light" style="margin: auto;box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.1);">
     <div class="card-header" style="font-size:2.2em;text-align: center;">登录失败！</div>
     <div class="card-body">
       <h5 class="card-title">请输入姓名、邮箱地址以及正确序列号进行登录！</h5>
