--- a/webplayer/templates/assessment.html
+++ b/webplayer/templates/assessment.html
@@ -16,6 +16,7 @@
         $('#current_video').attr("src",data.video_url);
         $('#current_videocount').text("您当前评估了"+testednumber+"个视频");
         $('#current_videocount_p').text("您当前评估了"+testednumber+"个视频，还有"+(10-testednumber)+"个视频需要评估。");
+        $('#qa_button').css("visibility","hidden");
       }
 
       $(function(){
@@ -92,7 +93,7 @@
       </span>
     </div>
     <div class="col-sm-9">
-      <div class="card border border-light" style="box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.1);">
+      <div class="card border border-light" style="box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.1);margin-bottom: 10px;">
         <div class="card-body">
 
           <div class="container">
@@ -119,7 +120,16 @@
           </div>
       
           <hr>
-          <div class="container" style="text-align: center;">
+
+
+
+        </div>
+      </div>
+
+      <div class="card border border-light" style="box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.1);">
+        <div class="card-body">
+
+          <div class="container" id="qa_button" style="text-align: center;visibility: hidden">
             <div class="btn-group" role="group">
               <button type="button" id="btn_true" class="btn btn-success">自然，不是伪造视频</button>
               <button type="button" id="btn_uncertain" class="btn btn-warning">有些不自然，可能是伪造视频</button>
@@ -127,14 +137,17 @@
             </div>
           </div>
 
-
         </div>
       </div>
-
     </div>
   </div>
 </div>
 
-    
+<script>
+  videojs('my-video').on('ended',function() { 
+    $('#qa_button').css("visibility","visible");
+  }) 
+
+</script>
 
 {% endblock %}
