--- a/webplayer/templates/base.html
+++ b/webplayer/templates/base.html
@@ -40,10 +40,7 @@
       crossorigin="anonymous"
     ></script>
     <footer>
-      <a href="https://beian.miit.gov.cn/" target="_blank"
-        >浙ICP备20029333号-1 </a
-      >
-      <p class="copyright">| &copy; made by George, supported by Django</p>
+      <p class="copyright">&copy; made by George, supported by Django</p>
     </footer>
   </body>
 </html>
