--- a/webplayer/templates/base.html
+++ b/webplayer/templates/base.html
@@ -40,7 +40,7 @@
       crossorigin="anonymous"
     ></script>
     <footer>
-      <p class="copyright">&copy; made by George, supported by Django</p>
+      <p class="copyright">&copy; made by George, supported by WMGroup</p>
     </footer>
   </body>
 </html>
