--- a/webplayer/templates/assessment.html
+++ b/webplayer/templates/assessment.html
@@ -93,7 +93,7 @@
 
 <div class="container" style="margin-top: 1.5em;margin-bottom: 1.5rem;">
   <div class="row">
-    <div class="col-sm-3">
+    <div class="col-sm-2">
       
       <div class="card border border-light" style="box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.1);">
         <div class="card-body">
@@ -111,7 +111,7 @@
       <span>
       </span>
     </div>
-    <div class="col-sm-9">
+    <div class="col-sm-10">
       <div class="card border border-light" style="box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.1);margin-bottom: 10px;">
         <div class="card-body">
 
@@ -167,15 +167,15 @@
 
               <div class="form-check form-check-inline">
                 <input class="form-check-input" type="radio" name="d2" id="btn2_2" value="option1" />
-                <label class="form-check-label" for="inlineRadio1">视频流畅</label>
+                <label class="form-check-label" for="inlineRadio1">面部表情逼真度高</label>
               </div>
               <div class="form-check form-check-inline">
                 <input class="form-check-input" type="radio" name="d2" id="btn2_1" value="option2" />
-                <label class="form-check-label" for="inlineRadio2">视频有些不流畅</label>
+                <label class="form-check-label" for="inlineRadio2">面部表情逼真度一般</label>
               </div>
               <div class="form-check form-check-inline">
                 <input class="form-check-input" type="radio" name="d2" id="btn2_0" value="option3" />
-                <label class="form-check-label" for="inlineRadio3">视频不流畅</label>
+                <label class="form-check-label" for="inlineRadio3">面部表情逼真度低</label>
               </div>
 
             </div>
@@ -183,15 +183,15 @@
 
               <div class="form-check form-check-inline">
                 <input class="form-check-input" type="radio" name="d3" id="btn3_2" value="option1" />
-                <label class="form-check-label" for="inlineRadio1">视频清晰度高</label>
+                <label class="form-check-label" for="inlineRadio1">人脸整体清晰度高</label>
               </div>
               <div class="form-check form-check-inline">
                 <input class="form-check-input" type="radio" name="d3" id="btn3_1" value="option2" />
-                <label class="form-check-label" for="inlineRadio2">视频清晰度中等</label>
+                <label class="form-check-label" for="inlineRadio2">人脸整体清晰度中等</label>
               </div>
               <div class="form-check form-check-inline">
                 <input class="form-check-input" type="radio" name="d3" id="btn3_0" value="option3" />
-                <label class="form-check-label" for="inlineRadio3">视频清晰度低</label>
+                <label class="form-check-label" for="inlineRadio3">人脸整体清晰度低</label>
               </div>
 
             </div>
