--- a/webplayer/templates/login.html
+++ b/webplayer/templates/login.html
@@ -10,7 +10,8 @@
   <div class="card border border-light" style="margin: auto;box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.1);min-width: 45%;">
     <div class="card-header" style="font-size:2.2em;text-align: center;">开始您的评估！</div>
     <div class="card-body">
-      
+      <p class="card-text">请您确保网络状态良好，并尽量使用大屏设备进行评估。</p>
+
       <form method="post" action="{% url 'logincheckpage' %}">
         {% csrf_token %}
         <div class="mb-3">
