--- a/webplayer/templates/assessment.html
+++ b/webplayer/templates/assessment.html
@@ -99,7 +99,7 @@
         <div class="card-body">
           <h5 class="card-title" style="text-align: center;font-size: 1.5rem;">打分介绍</h5>
           <hr>
-          <p class="card-text" style="font-size: 1.15rem;">请您对右侧视频进行评价。从人脸自然度、视频流畅度、视频清晰度分别评价。选择完成后，点击“下一个视频”按钮进入下一个视频。</p>
+          <p class="card-text" style="font-size: 1.15rem;">请您对右侧视频进行评价。从人脸自然度、面部表情逼真度、人脸整体清晰度分别评价。选择完成后，点击“下一个视频”按钮进入下一个视频。</p>
           <strong>
             <p id="current_videocount_p" style="font-size: 1.2rem;">您当前评估了{{ testednumber }}个视频，还有{{ testednumber|mul:-1|add:30 }}个视频需要评估。
               若有问题，请联系georgefen@qq.com</p>
