--- a/webplayer/templates/assessment.html
+++ b/webplayer/templates/assessment.html
@@ -3,7 +3,7 @@
 {% load mathfilters %}
 
 {% block head %}
-    <link href="https://vjs.zencdn.net/7.17.0/video-js.css" rel="stylesheet" />
+    <link href="/static/css/video-js.css" rel="stylesheet" />
     <title>Video Quality Assessment</title>
     <script src="/static/js/jquery-3.6.0.min.js"></script>
     <script>
@@ -135,7 +135,7 @@
                 <a href="https://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
               </p>
             </video>
-            <script src="https://vjs.zencdn.net/7.17.0/video.min.js"></script>
+            <script src="/static/js/video.min.js"></script>
           </div>
       
           <hr>
