--- a/webplayer/templates/preassessment.html
+++ b/webplayer/templates/preassessment.html
@@ -207,19 +207,23 @@
         if (time > watchMaxTime) {
             watchMaxTime = time;
         }
+        if (time>8){
+          sessionStorage.setItem('videostatus','done'); 
+          $('#btn_submit').attr("disabled",false);
+        }
       });
     });
 
   videojs.use('*', function(player){
-      return {
-          setCurrentTime: function(time) {
-              if (time > watchMaxTime) {
-                  return watchMaxTime;
-              } else {
-                  return time;
-              }
-          }
-      };
+    return {
+      setCurrentTime: function(time) {
+        if (time > watchMaxTime) {
+            return watchMaxTime;
+        } else {
+            return time;
+        }
+      }
+    };
   });
   videojs('my-video').on('ended',function() {
     $('#btn_submit').attr("disabled",false);
